# Vayumi

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  ORCHESTRATION_API.md  ORCHESTRATOR.md  PLAN.md  README.md  SYSTEM_INTEGRATION.md  architecture.drawio  multi.py  requirements.txt  tmp_api_smoke.py  tmp_live_ws_check.py
Server2/: .env.example  .gitignore  PLAN.md  README.md  REVIEW.md  agent-prompt.md  docker-compose.dev.yml  orchestrator_diagram_v2.drawio  orchestrator_diagram_v3.drawio  pyproject.toml  requirements.txt  test_llama.py
Server2/doc/: history.md  roadmap.md  step-01.md  step-02.md  step-03.md  step-04.md  step-05.md  step-06.md  step-07.md  step-08.md  step-09.md  step-10.md  step-11.md  step-12.md  step-13.md  step-14.md  tracker.md
Server2/prompts/: ack.txt  greeting.txt  main.txt  main_core.txt  main_tools.txt  meeting_summary.txt  summarizer.txt
Server2/prompts/sub/: comms.txt  productivity.txt  research.txt
Server2/scripts/: live_research_ws_test.py  live_tools_test.py  ws_feature_test.py  ws_smoke_test.py
Server2/server/: app.py  auth.py  config.py  logger.py
Server2/server/db/: lancedb.py  postgres.py  redis.py  schema.sql
Server2/server/engine/: __init__.py  pool.py  prompt.py  runner.py
Server2/server/memory/: _background.py  embeddings.py  facts.py  meeting_storage.py  meeting_summarizer.py  retrieval.py  session.py  summarizer.py  warm.py
Server2/server/orchestrator/: background_notify.py  directives.py  meeting.py  notifier.py  (+8 more)
Server2/tests/: conftest.py
Server2/web-client/: client.js  index.html  style.css
(+438 files in other folders)
