[project]
name = "vayumi-server2"
version = "0.1.0"
description = "Vayumi Server 2 — voice-first multi-agent assistant backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "asyncpg>=0.30",
    "redis>=5.2",
    "lancedb>=0.15",
    "httpx>=0.28",
    "python-jose[cryptography]>=3.3",
    "numpy>=1.26",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
include = ["server*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
